task1/task3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: task3

  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    traefik.backend.loadbalancer.sticky: "true"
spec:
  rules:
    - host: chaljao.info
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  frontend-service
                port:
                  number: 3000
